fixed replyLine size not aligned with repliy boxes

--- a/styles/CommentsViewer.module.css
+++ b/styles/CommentsViewer.module.css
@@ -1,13 +1,20 @@
+.replyContainerWrapper {
+    overflow: hidden;
+    position: relative;
+}
+
 .replyContainer {
     width: 95%;
     margin-left: auto;
-    display: flex;
 }
 
 .replyLine {
     background: var(--light-gray);
     height: 5px;
-    margin-right: 3%;
-    transform-origin: bottom left;
-    transform: rotateZ(90deg) scale(0.82);
+    transform-origin: bottom right;
+    transform: rotateZ(90deg);
+    min-width: 1000px;
+    position: absolute;
+    bottom: 1rem;
+    right: 100%;
 }
